--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -22,7 +22,7 @@
     <!-- NAV END -->
     <!-- 打赏 START -->
     <% if (theme.donate) { %>
-      <div class="money-like">
+      <!--<div class="money-like">
         <div class="reward-btn">
           赏
           <span class="money-code">
@@ -37,7 +37,7 @@
           </span>
         </div>
         <p class="notice">若你觉得我的文章对你有帮助，欢迎点击上方按钮对我打赏</p>
-      </div>
+      </div>-->
     <% } %>
     <!-- 打赏 END -->
     <!-- 二维码 START -->
